# HerbivorumErectus

./: Cargo.toml  README.md
src/: main.rs
src/commands/: admin.rs  help.rs  math.rs  meta.rs  mod.rs  owner.rs
